# brutus-python-interface

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  lib_paths.cmake  main.cpp  main.py  requirements.txt  setup.py
brutus/: __init__.py  dummy_simulation.py
brutus/common/: __init__.py  _common.py
brutus/output/: __init__.py  _output.py
brutus/simulation/: __init__.py  _simulation.py
brutus_code/: Cluster.h  Star.h
docs/source/: brutus-internals.rst  conf.py  extending.rst  index.rst  installation.rst  usage.rst
examples/: n_body.py  n_cluster.py  three_body.py
tests/: test_cluster.py  test_compilation.py  test_output.py  test_simulation.py  test_star.py
